--- a/css/output.css
+++ b/css/output.css
@@ -1136,6 +1136,16 @@
       max-height: 400px;
     }
   }
+  .max-\[1920px\]\:max-h-\[430px\] {
+    @media (width < 1920px) {
+      max-height: 430px;
+    }
+  }
+  .max-\[1920px\]\:max-h-\[450px\] {
+    @media (width < 1920px) {
+      max-height: 450px;
+    }
+  }
   .max-\[1920px\]\:max-h-\[500px\] {
     @media (width < 1920px) {
       max-height: 500px;
