--- a/css/output.css
+++ b/css/output.css
@@ -242,9 +242,6 @@
   .my-16 {
     margin-block: calc(var(--spacing) * 16);
   }
-  .-mt-7 {
-    margin-top: calc(var(--spacing) * -7);
-  }
   .-mt-7\.5 {
     margin-top: calc(var(--spacing) * -7.5);
   }
@@ -254,17 +251,14 @@
   .-mt-18 {
     margin-top: calc(var(--spacing) * -18);
   }
-  .-mt-22 {
-    margin-top: calc(var(--spacing) * -22);
-  }
   .-mt-22\.5 {
     margin-top: calc(var(--spacing) * -22.5);
   }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
   }
-  .mt-2 {
-    margin-top: calc(var(--spacing) * 2);
+  .mt-5 {
+    margin-top: calc(var(--spacing) * 5);
   }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
@@ -274,6 +268,9 @@
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
+  }
+  .mt-\[94px\] {
+    margin-top: 94px;
   }
   .mr-1 {
     margin-right: calc(var(--spacing) * 1);
@@ -292,9 +289,6 @@
   }
   .-mb-15 {
     margin-bottom: calc(var(--spacing) * -15);
-  }
-  .mb-0 {
-    margin-bottom: calc(var(--spacing) * 0);
   }
   .mb-0\! {
     margin-bottom: calc(var(--spacing) * 0) !important;
@@ -344,9 +338,6 @@
   .mb-16 {
     margin-bottom: calc(var(--spacing) * 16);
   }
-  .mb-19 {
-    margin-bottom: calc(var(--spacing) * 19);
-  }
   .mb-19\.5 {
     margin-bottom: calc(var(--spacing) * 19.5);
   }
@@ -395,9 +386,6 @@
   .hidden\! {
     display: none !important;
   }
-  .table {
-    display: table;
-  }
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
@@ -427,9 +415,6 @@
   }
   .h-19 {
     height: calc(var(--spacing) * 19);
-  }
-  .h-33 {
-    height: calc(var(--spacing) * 33);
   }
   .h-33\.5\! {
     height: calc(var(--spacing) * 33.5) !important;
@@ -464,9 +449,6 @@
   .w-8 {
     width: calc(var(--spacing) * 8);
   }
-  .w-10 {
-    width: calc(var(--spacing) * 10);
-  }
   .w-10\! {
     width: calc(var(--spacing) * 10) !important;
   }
@@ -479,17 +461,11 @@
   .w-18 {
     width: calc(var(--spacing) * 18);
   }
-  .w-30 {
-    width: calc(var(--spacing) * 30);
-  }
   .w-30\! {
     width: calc(var(--spacing) * 30) !important;
   }
   .w-40 {
     width: calc(var(--spacing) * 40);
-  }
-  .w-41 {
-    width: calc(var(--spacing) * 41);
   }
   .w-41\.5 {
     width: calc(var(--spacing) * 41.5);
@@ -497,14 +473,8 @@
   .w-42 {
     width: calc(var(--spacing) * 42);
   }
-  .w-44 {
-    width: calc(var(--spacing) * 44);
-  }
   .w-44\.5 {
     width: calc(var(--spacing) * 44.5);
-  }
-  .w-46 {
-    width: calc(var(--spacing) * 46);
   }
   .w-46\.5 {
     width: calc(var(--spacing) * 46.5);
@@ -514,9 +484,6 @@
   }
   .w-74 {
     width: calc(var(--spacing) * 74);
-  }
-  .w-76 {
-    width: calc(var(--spacing) * 76);
   }
   .w-76\.5 {
     width: calc(var(--spacing) * 76.5);
@@ -611,9 +578,6 @@
   .flex-1 {
     flex: 1;
   }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
   .shrink-0 {
     flex-shrink: 0;
   }
@@ -622,9 +586,6 @@
   }
   .basis-\[calc\(50\%-0\.375rem\)\] {
     flex-basis: calc(50% - 0.375rem);
-  }
-  .border-collapse {
-    border-collapse: collapse;
   }
   .-rotate-90 {
     rotate: calc(90deg * -1);
@@ -637,9 +598,6 @@
   }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -700,9 +658,6 @@
   }
   .gap-13 {
     gap: calc(var(--spacing) * 13);
-  }
-  .gap-16 {
-    gap: calc(var(--spacing) * 16);
   }
   .gap-16\.5 {
     gap: calc(var(--spacing) * 16.5);
@@ -877,9 +832,6 @@
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
   }
-  .py-7 {
-    padding-block: calc(var(--spacing) * 7);
-  }
   .py-7\.5 {
     padding-block: calc(var(--spacing) * 7.5);
   }
@@ -895,17 +847,11 @@
   .py-40 {
     padding-block: calc(var(--spacing) * 40);
   }
-  .py-42 {
-    padding-block: calc(var(--spacing) * 42);
-  }
   .py-42\.5 {
     padding-block: calc(var(--spacing) * 42.5);
   }
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
-  }
-  .pt-22 {
-    padding-top: calc(var(--spacing) * 22);
   }
   .pt-22\.5 {
     padding-top: calc(var(--spacing) * 22.5);
@@ -916,17 +862,11 @@
   .pt-39 {
     padding-top: calc(var(--spacing) * 39);
   }
-  .pt-40 {
-    padding-top: calc(var(--spacing) * 40);
-  }
-  .pt-42 {
-    padding-top: calc(var(--spacing) * 42);
-  }
   .pt-42\.5 {
     padding-top: calc(var(--spacing) * 42.5);
   }
-  .pr-46 {
-    padding-right: calc(var(--spacing) * 46);
+  .pt-\[94px\] {
+    padding-top: 94px;
   }
   .pr-46\.25 {
     padding-right: calc(var(--spacing) * 46.25);
@@ -946,9 +886,6 @@
   .pb-18 {
     padding-bottom: calc(var(--spacing) * 18);
   }
-  .pl-10 {
-    padding-left: calc(var(--spacing) * 10);
-  }
   .pl-10\! {
     padding-left: calc(var(--spacing) * 10) !important;
   }
@@ -964,9 +901,6 @@
   .text-center\! {
     text-align: center !important;
   }
-  .text-start {
-    text-align: start;
-  }
   .text-start\! {
     text-align: start !important;
   }
@@ -977,10 +911,6 @@
   .text-5xl {
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
-  }
-  .text-base {
-    font-size: var(--text-base);
-    line-height: var(--tw-leading, var(--text-base--line-height));
   }
   .text-base\! {
     font-size: var(--text-base) !important;
@@ -1081,20 +1011,12 @@
   .underline {
     text-decoration-line: underline;
   }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
   .blur {
     --tw-blur: blur(8px);
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
-  }
-  .backdrop-filter {
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
@@ -1867,11 +1789,6 @@
       margin-right: calc(var(--spacing) * 0);
     }
   }
-  .max-\[1024px\]\:mr-2 {
-    @media (width < 1024px) {
-      margin-right: calc(var(--spacing) * 2);
-    }
-  }
   .max-\[1024px\]\:mb-0 {
     @media (width < 1024px) {
       margin-bottom: calc(var(--spacing) * 0);
@@ -2211,12 +2128,6 @@
     @media (width < 1024px) {
       font-size: var(--text-lg);
       line-height: var(--tw-leading, var(--text-lg--line-height));
-    }
-  }
-  .max-\[1024px\]\:text-lg\! {
-    @media (width < 1024px) {
-      font-size: var(--text-lg) !important;
-      line-height: var(--tw-leading, var(--text-lg--line-height)) !important;
     }
   }
   .max-\[1024px\]\:text-sm {
@@ -2805,18 +2716,6 @@
       line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
-  .max-\[768px\]\:text-xs {
-    @media (width < 768px) {
-      font-size: var(--text-xs);
-      line-height: var(--tw-leading, var(--text-xs--line-height));
-    }
-  }
-  .max-\[768px\]\:text-xs\! {
-    @media (width < 768px) {
-      font-size: var(--text-xs) !important;
-      line-height: var(--tw-leading, var(--text-xs--line-height)) !important;
-    }
-  }
   .max-\[768px\]\:text-\[1\.75rem\] {
     @media (width < 768px) {
       font-size: 1.75rem;
@@ -2939,7 +2838,7 @@ body {
     font-size: 14px;
   }
   .about_line {
-    height: 28.2rem;
+    height: 353px;
   }
 }
 @media (max-width: 1439px) {
@@ -3512,11 +3411,6 @@ button {
   syntax: "*";
   inherits: false;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -3570,42 +3464,6 @@ button {
   syntax: "*";
   inherits: false;
 }
-@property --tw-backdrop-blur {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-brightness {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-contrast {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-grayscale {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-hue-rotate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-invert {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-opacity {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-saturate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-sepia {
-  syntax: "*";
-  inherits: false;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -3617,7 +3475,6 @@ button {
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
-      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
@@ -3631,15 +3488,6 @@ button {
       --tw-drop-shadow-color: initial;
       --tw-drop-shadow-alpha: 100%;
       --tw-drop-shadow-size: initial;
-      --tw-backdrop-blur: initial;
-      --tw-backdrop-brightness: initial;
-      --tw-backdrop-contrast: initial;
-      --tw-backdrop-grayscale: initial;
-      --tw-backdrop-hue-rotate: initial;
-      --tw-backdrop-invert: initial;
-      --tw-backdrop-opacity: initial;
-      --tw-backdrop-saturate: initial;
-      --tw-backdrop-sepia: initial;
     }
   }
 }
