--- a/css/output.css
+++ b/css/output.css
@@ -236,9 +236,6 @@
   .mx-auto {
     margin-inline: auto;
   }
-  .my-16 {
-    margin-block: calc(var(--spacing) * 16);
-  }
   .-mt-7 {
     margin-top: calc(var(--spacing) * -7);
   }
@@ -271,6 +268,12 @@
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
+  }
+  .mt-16 {
+    margin-top: calc(var(--spacing) * 16);
+  }
+  .mt-20 {
+    margin-top: calc(var(--spacing) * 20);
   }
   .mt-\[94px\] {
     margin-top: 94px;
@@ -1578,11 +1581,6 @@
       gap: calc(var(--spacing) * 5);
     }
   }
-  .max-\[1440px\]\:gap-7 {
-    @media (width < 1440px) {
-      gap: calc(var(--spacing) * 7);
-    }
-  }
   .max-\[1440px\]\:overflow-auto {
     @media (width < 1440px) {
       overflow: auto;
@@ -1806,39 +1804,9 @@
       line-height: calc(var(--spacing) * 7);
     }
   }
-  .max-\[1025px\]\:mt-0 {
-    @media (width < 1025px) {
-      margin-top: calc(var(--spacing) * 0);
-    }
-  }
-  .max-\[1025px\]\:mt-4 {
-    @media (width < 1025px) {
-      margin-top: calc(var(--spacing) * 4);
-    }
-  }
-  .max-\[1025px\]\:mt-5 {
-    @media (width < 1025px) {
-      margin-top: calc(var(--spacing) * 5);
-    }
-  }
-  .max-\[1025px\]\:mt-8 {
-    @media (width < 1025px) {
-      margin-top: calc(var(--spacing) * 8);
-    }
-  }
-  .max-\[1025px\]\:mt-10 {
-    @media (width < 1025px) {
-      margin-top: calc(var(--spacing) * 10);
-    }
-  }
   .max-\[1025px\]\:mt-11 {
     @media (width < 1025px) {
       margin-top: calc(var(--spacing) * 11);
-    }
-  }
-  .max-\[1025px\]\:mt-12 {
-    @media (width < 1025px) {
-      margin-top: calc(var(--spacing) * 12);
     }
   }
   .max-\[1025px\]\:mb-10 {
@@ -1859,16 +1827,6 @@
   .max-\[1025px\]\:pr-4\! {
     @media (width < 1025px) {
       padding-right: calc(var(--spacing) * 4) !important;
-    }
-  }
-  .max-\[1025px\]\:pr-8 {
-    @media (width < 1025px) {
-      padding-right: calc(var(--spacing) * 8);
-    }
-  }
-  .max-\[1025px\]\:pr-8\! {
-    @media (width < 1025px) {
-      padding-right: calc(var(--spacing) * 8) !important;
     }
   }
   .max-\[1025px\]\:text-5xl\! {
@@ -2191,11 +2149,6 @@
   .max-\[1024px\]\:gap-2 {
     @media (width < 1024px) {
       gap: calc(var(--spacing) * 2);
-    }
-  }
-  .max-\[1024px\]\:gap-5 {
-    @media (width < 1024px) {
-      gap: calc(var(--spacing) * 5);
     }
   }
   .max-\[1024px\]\:gap-10 {
@@ -2684,11 +2637,6 @@
   .max-\[768px\]\:w-82 {
     @media (width < 768px) {
       width: calc(var(--spacing) * 82);
-    }
-  }
-  .max-\[768px\]\:w-\[140px\] {
-    @media (width < 768px) {
-      width: 140px;
     }
   }
   .max-\[768px\]\:w-full {
