--- a/css/output.css
+++ b/css/output.css
@@ -823,9 +823,6 @@
   .object-cover {
     object-fit: cover;
   }
-  .object-center {
-    object-position: center;
-  }
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
@@ -867,6 +864,9 @@
   }
   .px-15 {
     padding-inline: calc(var(--spacing) * 15);
+  }
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
   }
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
@@ -1901,21 +1901,6 @@
       bottom: calc(var(--spacing) * 2);
     }
   }
-  .max-\[1024px\]\:mt-7 {
-    @media (width < 1024px) {
-      margin-top: calc(var(--spacing) * 7);
-    }
-  }
-  .max-\[1024px\]\:mt-10 {
-    @media (width < 1024px) {
-      margin-top: calc(var(--spacing) * 10);
-    }
-  }
-  .max-\[1024px\]\:mt-12 {
-    @media (width < 1024px) {
-      margin-top: calc(var(--spacing) * 12);
-    }
-  }
   .max-\[1024px\]\:mt-13 {
     @media (width < 1024px) {
       margin-top: calc(var(--spacing) * 13);
@@ -1924,11 +1909,6 @@
   .max-\[1024px\]\:mt-14 {
     @media (width < 1024px) {
       margin-top: calc(var(--spacing) * 14);
-    }
-  }
-  .max-\[1024px\]\:mt-17 {
-    @media (width < 1024px) {
-      margin-top: calc(var(--spacing) * 17);
     }
   }
   .max-\[1024px\]\:mr-0 {
@@ -2101,29 +2081,9 @@
       width: calc(var(--spacing) * 110);
     }
   }
-  .max-\[1024px\]\:w-\[60\%\] {
-    @media (width < 1024px) {
-      width: 60%;
-    }
-  }
-  .max-\[1024px\]\:w-\[80\%\] {
-    @media (width < 1024px) {
-      width: 80%;
-    }
-  }
-  .max-\[1024px\]\:w-\[90\%\] {
-    @media (width < 1024px) {
-      width: 90%;
-    }
-  }
   .max-\[1024px\]\:w-\[138px\] {
     @media (width < 1024px) {
       width: 138px;
-    }
-  }
-  .max-\[1024px\]\:w-\[324px\] {
-    @media (width < 1024px) {
-      width: 324px;
     }
   }
   .max-\[1024px\]\:w-\[728px\] {
@@ -2169,11 +2129,6 @@
   .max-\[1024px\]\:max-w-full {
     @media (width < 1024px) {
       max-width: 100%;
-    }
-  }
-  .max-\[1024px\]\:flex-0 {
-    @media (width < 1024px) {
-      flex: 0;
     }
   }
   .max-\[1024px\]\:basis-\[calc\(50\%-0\.375rem\)\] {
@@ -2689,24 +2644,9 @@
       width: calc(var(--spacing) * 75);
     }
   }
-  .max-\[768px\]\:w-82 {
-    @media (width < 768px) {
-      width: calc(var(--spacing) * 82);
-    }
-  }
-  .max-\[768px\]\:w-\[100vw\] {
-    @media (width < 768px) {
-      width: 100vw;
-    }
-  }
   .max-\[768px\]\:w-full {
     @media (width < 768px) {
       width: 100%;
-    }
-  }
-  .max-\[768px\]\:max-w-\[360px\] {
-    @media (width < 768px) {
-      max-width: 360px;
     }
   }
   .max-\[768px\]\:max-w-full {
@@ -2804,16 +2744,6 @@
     @media (width < 768px) {
       border-bottom-right-radius: var(--radius-xl);
       border-bottom-left-radius: var(--radius-xl);
-    }
-  }
-  .max-\[768px\]\:object-contain {
-    @media (width < 768px) {
-      object-fit: contain;
-    }
-  }
-  .max-\[768px\]\:object-fill {
-    @media (width < 768px) {
-      object-fit: fill;
     }
   }
   .max-\[768px\]\:p-4 {
